--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -1,3 +1,6 @@
 <div id="app">
-  {{ message }}
+  <div v-for="person in people">
+    <h2>{{ person.name }}</h2>
+    <h3>{{ person.bio }}</h3>
+  </div>
 </div>
