--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -1,6 +1,12 @@
 <div id="app">
+  <h1>{{ people.length }}</h1>
   <div v-for="person in people">
-    <h2>{{ person.name }}</h2>
-    <h3>{{ person.bio }}</h3>
+    <h2 v-on:click="toggleBio(person)">{{ person.name }}</h2>
+    <h3 v-if="person.bioVisible">{{ person.bio }}</h3>
+    <p v-on:click="deletePerson(people.indexOf(person))">Delete Person</p>
   </div>
+
+  <input v-model="newName">
+  <input v-model="newBio">
+  <button v-on:click="addPerson()">Add Person</button>
 </div>
