--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -2,9 +2,10 @@
   <h1>{{ people.length }}</h1>
   <div v-for="person in people">
     <h2 v-on:click="toggleBio(person)">{{ person.name }}</h2>
-    <h3 v-bind:class="{hide: person.bioVisible}" class="strike">{{ person.bio }}</h3>
+    <h3 v-bind:class="{strike: person.bioVisible}">{{ person.bio }}</h3>
     <p v-on:click="deletePerson(people.indexOf(person))">Delete Person</p>
   </div>
+  {{ people.length }}
 
   <input v-model="newName">
   <input v-model="newBio">
