--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -7,6 +7,9 @@
   </div>
   {{ people.length }}
 
+  <ul>
+    <li v-for="error in errors"> {{ error }} </li>
+  </ul>
   <input v-model="newName">
   <input v-model="newBio">
   <button v-on:click="addPerson()">Add Person</button>
