add delete and update requests

--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -3,7 +3,10 @@
   <div v-for="person in people">
     <h2 v-on:click="toggleBio(person)">{{ person.name }}</h2>
     <h3 v-bind:class="{strike: person.bioVisible}">{{ person.bio }}</h3>
-    <p v-on:click="deletePerson(people.indexOf(person))">Delete Person</p>
+    <p v-on:click="deletePerson(person)">Delete Person</p>
+    <input v-model="updateName">
+    <input v-model="updateBio">
+    <button v-on:click="updatePerson(person)">Update Person</button>
   </div>
   {{ people.length }}
 
