--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -1,6 +1,7 @@
 <div id="app">
   <h1>{{ people.length }}</h1>
-  <div v-for="person in people">
+  Search by name: <input v-model="nameFilter">
+  <div v-for="person in people" v-if="isValidPerson(person)">
     <h2 v-on:click="toggleBio(person)">{{ person.name }}</h2>
     <h3 v-bind:class="{strike: person.bioVisible}">{{ person.bio }}</h3>
     <p v-on:click="deletePerson(person)">Delete Person</p>
