--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -4,7 +4,11 @@
   <datalist id="names">
     <option v-for="person in people">{{ person.name }}</option>
   </datalist>
-  <div v-for="person in people" v-if="isValidPerson(person)">
+  <div>
+    <button v-on:click="setSortAttribute('name')">Sort by name</button>
+    <button v-on:click="setSortAttribute('bio')">Sort by bio</button>
+  </div>
+  <div v-for="person in modifiedPeople" v-if="isValidPerson(person)">
     <h2 v-on:click="toggleBio(person)">{{ person.name }}</h2>
     <h3 v-bind:class="{strike: person.bioVisible}">{{ person.bio }}</h3>
     <p v-on:click="deletePerson(person)">Delete Person</p>
