--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -5,17 +5,17 @@
     <option v-for="person in people">{{ person.name }}</option>
   </datalist>
   <div>
-    <button v-on:click="setSortAttribute('name')">Sort by name</button>
-    <button v-on:click="setSortAttribute('bio')">Sort by bio</button>
+    <button @click="setSortAttribute('name')">Sort by name</button>
+    <button @click="setSortAttribute('bio')">Sort by bio</button>
   </div>
   <transition-group name="fade">
-    <div v-for="person in modifiedPeople" v-if="isValidPerson(person)" v-bind:key="person.id">
-      <h2 v-on:click="toggleBio(person)">{{ person.name }}</h2>
-      <h3 v-bind:class="{strike: person.bioVisible}">{{ person.bio }}</h3>
-      <p v-on:click="deletePerson(person)">Delete Person</p>
+    <div v-for="person in modifiedPeople" v-if="isValidPerson(person)" :key="person.id">
+      <h2 @click="toggleBio(person)">{{ person.name }}</h2>
+      <h3 :class="{strike: person.bioVisible}">{{ person.bio }}</h3>
+      <p @click="deletePerson(person)">Delete Person</p>
       <input v-model="updateName">
       <input v-model="updateBio">
-      <button v-on:click="updatePerson(person)">Update Person</button>
+      <button @click="updatePerson(person)">Update Person</button>
     </div>
   </transition-group>
   {{ people.length }}
@@ -25,5 +25,5 @@
   </ul>
   <input v-model="newName">
   <input v-model="newBio">
-  <button v-on:click="addPerson()">Add Person</button>
+  <button @click="addPerson()">Add Person</button>
 </div>
